--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	box-shadow: 0 0 10px rgba(0,0,0,0.5)
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 header{
 	height: 23vh;
